Modified index.html and deleted images.png

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <td><img width="400" src="./imgs/landscape-tropical-vacation-palm-summer.jpg" alt="wooden rood in middel the sea conect to tropical island" /></td>
             <td><p>Do you want to see the stars and the moon and enjoy a night sky free from light pollution? <br/>
                 Book with us at one of our mountain hotels, where you can witness breathtaking views of mountains, sky, and sea in unparalleled purity</p></td>
-            <td><img width="400" src="./imgs/luxurious resort whithe infinity pool.jpg" /></td>
+            <td><img width="400" src="./imgs/luxurious resort whithe infinity pool.jpg" alt=" mountain-hotels-withe-swimming-pool"/></td>
           </tr>
           <tr>
             <td><p>Book a tour with us to the most breathtaking places and witness the astonishing engineering marvels built by mankind</p></td>
-            <td><img width="400" src="./imgs/bruce-rottgers-x2uU3yoGDLs-unsplash.jpg" /></td>
+            <td><img width="400" src="./imgs/bruce-rottgers-x2uU3yoGDLs-unsplash.jpg"  alt="graet-wall-of-china"/></td>
             <td><p>or just want privet villa? <br/> book one of hundred villais we offer aroud the world</p></td>
-            <td><img width="400" src="./imgs/white villa withe swimming pool in front.jpg" /></td>
+            <td><img width="400" src="./imgs/white villa withe swimming pool in front.jpg" alt="villa-withe-swimming-pool-in-front" /></td>
           </tr>
           <tr>
             <td><p>short vacation<br/> we have what you want</p></td>
-            <td><img width="400" src="./imgs/swimming-pool.jpg" /></td>
+            <td><img width="400" src="./imgs/swimming-pool.jpg" alt="hotel"/></td>
             <td><p>Do you want to explore the world's most beautiful cities? <br/>
                 We have a fleet of planes and dedicated hosts to assist you on your journey</p></td>
-            <td><img width="400" src="./imgs/cityscape-singapore-city-skyline.jpg" /></td>
+            <td><img width="400" src="./imgs/cityscape-singapore-city-skyline.jpg" alt="singapore-city-skyline" /></td>
           </tr>
         </tbody>
       </table>
